manifests/draw/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: drawio
  namespace: drawio
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: drawio
